[workspace]
members=["sbx-tool-core","sbx-tool-dll","sbx-offset"]
resolver = "2"

[profile.dev]
opt-level = 3
lto= 'fat'
panic='abort'

[profile.release]
opt-level = 3 
overflow-checks = false
debug = false
lto= 'fat'
panic='abort'
strip = "debuginfo"
debug-assertions = true  #crash if set to false, TODO figure out why
codegen-units = 1